--- a/Python/Lez_20231222.ipynb
+++ b/Python/Lez_20231222.ipynb
@@ -278,6 +278,316 @@
     "\n",
     "Classifica_serieA"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Connessione a SQL Server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SQL Server', 'SQL Server Native Client 11.0', 'SQL Server Native Client RDA 11.0', 'ODBC Driver 17 for SQL Server', 'Microsoft Access Driver (*.mdb, *.accdb)', 'Microsoft Excel Driver (*.xls, *.xlsx, *.xlsm, *.xlsb)', 'Microsoft Access Text Driver (*.txt, *.csv)']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyodbc\n",
+    "\n",
+    "# py ODBC: Open DataBase Connection\n",
+    "print(pyodbc.drivers())\n",
+    "driver = '{ODBC Driver 17 for SQL Server}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DRIVER={ODBC Driver 17 for SQL Server};SERVER=localhost;DATABASE=testPython;Trusted_Connection=yes;\n"
+     ]
+    }
+   ],
+   "source": [
+    "# La mia prima connessione\n",
+    "driver = '{ODBC Driver 17 for SQL Server}'\n",
+    "server = 'localhost'\n",
+    "database = 'testPython'\n",
+    "conn_string = f\"DRIVER={driver};SERVER={server};DATABASE={database};Trusted_Connection=yes;\"\n",
+    "\n",
+    "print(conn_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnxn = pyodbc.connect(conn_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creazione di una tabella"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyodbc.Cursor at 0x284d2a67a30>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor = cnxn.cursor()\n",
+    "\n",
+    "query = 'create table dbo.Colori (id int identity(1,1), colore varchar(50))'\n",
+    "result = cursor.execute(query)\n",
+    "result.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inserimento di record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"insert into dbo.Colori(colore) values ('rosso'),('bianco'),('verde')\"\n",
+    "\n",
+    "cursor.execute(query)\n",
+    "cursor.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lettura di record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"SELECT [id],[colore] FROM [dbo].[Colori]\"\n",
+    "\n",
+    "table = []\n",
+    "cursor.execute(query)\n",
+    "for row in cursor:\n",
+    "    table.append(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# il cursore è oneshot: nel momento in cui apro il contenuto di una riga viene eliminata dal cursore\n",
+    "for row in cursor:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'rosso'),\n",
+       " (2, 'bianco'),\n",
+       " (3, 'verde'),\n",
+       " (4, 'rosso'),\n",
+       " (5, 'bianco'),\n",
+       " (6, 'verde')]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"SELECT [id],[colore] FROM [dbo].[Colori]\"\n",
+    "\n",
+    "table = []\n",
+    "cursor.execute(query)\n",
+    "table = cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'rosso'),\n",
+       " (2, 'bianco'),\n",
+       " (3, 'verde'),\n",
+       " (4, 'rosso'),\n",
+       " (5, 'bianco'),\n",
+       " (6, 'verde')]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creazione della Classifica di Serie A tramite stored_procedure\n",
+    "\n",
+    "```sql \n",
+    "create procedure dbo.jsonInput @json nvarchar(max) as\n",
+    "-- isjson, json_value, json_query, openjson\n",
+    "\n",
+    "IF ISJSON(@json) = 1\n",
+    "\tdrop table if exists dbo.Classifica_SerieA\n",
+    "\n",
+    "\tcreate table dbo.Classifica_SerieA (\n",
+    "\tid int identity(1,1),\n",
+    "\tSquadra varchar(20),\n",
+    "\tPunteggio tinyint\n",
+    "\t)\n",
+    "\n",
+    "\tinsert into dbo.Classifica_SerieA\n",
+    "\t\tselect [key] as Squadra, [value] as Punteggio\n",
+    "\t\tfrom openjson(@json)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exec dbo.jsonInput \n"
+     ]
+    }
+   ],
+   "source": [
+    "query = f\"exec dbo.jsonInput \"\n",
+    "print(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`%pip install json`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'Inter', 41), (2, 'Juventus', 37), (3, 'Milan', 32), (4, 'Bologna', 28), (5, 'Fiorentina', 27), (6, 'Napoli', 27), (7, 'Atalanta', 26), (8, 'Roma', 25), (9, 'Torino', 23), (10, 'Monza', 21), (11, 'Lazio', 21), (12, 'Lecce', 20), (13, 'Frosinone', 19), (14, 'Genoa', 16), (15, 'Sassuolo', 16), (16, 'Cagliari', 13), (17, 'Udinese', 13), (18, 'Empoli', 12), (19, 'Hellas Verona', 11), (20, 'Salernitana', 8)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "Classifica_serieA_JSON = json.dumps(Classifica_serieA)\n",
+    "query = f\"exec dbo.jsonInput '{Classifica_serieA_JSON}'\"\n",
+    "cursor.execute(query)\n",
+    "cursor.commit()\n",
+    "\n",
+    "cursor.execute(\"Select * from dbo.Classifica_SerieA\")\n",
+    "print(cursor.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute(\"truncate table dbo.Classifica_SerieA\").commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'Inter', 41), (2, 'Juventus', 37), (3, 'Milan', 32), (4, 'Bologna', 28), (5, 'Fiorentina', 27), (6, 'Napoli', 27), (7, 'Atalanta', 26), (8, 'Roma', 25), (9, 'Torino', 23), (10, 'Monza', 21), (11, 'Lazio', 21), (12, 'Lecce', 20), (13, 'Frosinone', 19), (14, 'Genoa', 16), (15, 'Sassuolo', 16), (16, 'Cagliari', 13), (17, 'Udinese', 13), (18, 'Empoli', 12), (19, 'Hellas Verona', 11), (20, 'Salernitana', 8)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in Classifica_serieA:\n",
+    "    cursor.execute( \"insert into dbo.Classifica_SerieA values (?,?)\", item, Classifica_serieA[item]).commit()\n",
+    "\n",
+    "cursor.execute(\"Select * from dbo.Classifica_SerieA\")\n",
+    "print(cursor.fetchall())"
+   ]
   }
  ],
  "metadata": {
